# ImageHash

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: README.md  __init__.py  __main__.py  manager.py
src/image_hash/: README.md  __init__.py  hasher.py  method.py
src/image_hash/hashers/: README.md  __init__.py  bitwise.py  vector.py
src/image_hash/wavelet/: README.md  __init__.py  mode.py  wavelet_hash.py
src/wavelet/: README.md  __init__.py  wavelet_hash.py
tests/: _helpers.py  conftest.py  test.py
