[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-hash"
version = "0.0.1"
authors = [
  { name="Ryuto Yoshida"},
]
description = "Compare images using perceptual hash methods (PHash, wavelet hash, etc.)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-contrib-python",
    "scipy",
    "PyWavelets",
]

[project.urls]
Homepage = "https://github.com/ry-yoshida-private/ImageHash"
"Bug Tracker" = "https://github.com/ry-yoshida-private/ImageHash/issues"

[tool.setuptools.packages.find]
where = ["src"]
